--- a/_posts/2000-01-02-cfp.md
+++ b/_posts/2000-01-02-cfp.md
@@ -16,7 +16,7 @@ We invite topics related to NLP-OSS under broadly categorized into (i) software 
    - Growing an NLP OSS community
    - Maintaining and motivating NLP OSS community
    - Best practices for NLP OSS documentations and tests
-   - Contribution to OSS without coding
+   - Contribution to NLP OSS without coding
    - Incentivizing OSS contributions in NLP
 
  - **Scientific Contribution**
@@ -36,7 +36,7 @@ We invite topics related to NLP-OSS under broadly categorized into (i) software 
    - Writing wrappers for other NLP OSS
    - Writing open-source APIs for open data
    - Teaching NLP with OSS
-   - Avoiding the hammer OSS
+   - Avoiding the hammer OSS in NLP
 
 ## Workshop Structure
 
