--- a/_posts/2000-01-04-talks.md
+++ b/_posts/2000-01-04-talks.md
@@ -9,3 +9,4 @@ fa-icon: microphone
 
 - [Christopher Manning](https://nlp.stanford.edu/manning/), Stanford University
 - [Matthew Honnibal and Ines Montani](https://explosion.ai), Explosion AI
+- [Joel Nothman](http://joelnothman.com/), University of Sydney
