Made some spelling and style changes to _posts/ content.

--- a/_posts/2000-01-02-cfp.md
+++ b/_posts/2000-01-02-cfp.md
@@ -10,30 +10,30 @@ fa-icon: file-text-o
 We invite topics related to NLP-OSS under broadly categorized into (i) software development, (ii) scientific contribution (iii) NLP-OSS case studies.
 
  - **Software Development**
-   - Designing and developing NLP OSS
-   - Licensing issues in NLP OSS
-   - Backwards compatibility and stale code in NLP OSS
-   - Growing an NLP OSS community
-   - Maintaining and motivating NLP OSS community
-   - Best practices for NLP OSS documentations and tests
-   - Contribution to NLP OSS without coding
+   - Designing and developing NLP-OSS
+   - Licensing issues in NLP-OSS
+   - Backwards compatibility and stale code in NLP-OSS
+   - Growing an NLP-OSS community
+   - Maintaining and motivating an NLP-OSS community
+   - Best practices for NLP-OSS documentation and testing
+   - Contribution to NLP-OSS without coding
    - Incentivizing OSS contributions in NLP
 
  - **Scientific Contribution**
    - Benchmarking OSS for specific NLP task(s)
-   - Demonstration and tutorial of NLP OSS
-   - New NLP OSS introductions
-   - Small but useful NLP OSS
-   - Machine learning vs NLP OSS
-   - Citations and references for NLP OSS
+   - Demonstration and tutorial of NLP-OSS
+   - New NLP-OSS introductions
+   - Small but useful NLP-OSS
+   - Machine learning vs NLP-OSS
+   - Citations and references for NLP-OSS
    - OSS vs experiment replicability
-   - Gaps between existing NLP OSS
-   - Task independent NLP OSS
+   - Gaps between existing NLP-OSS
+   - Task-independent NLP-OSS
 
 
  - **Case studies**
    - Case studies of how a specific bug is fixed or feature is added
-   - Writing wrappers for other NLP OSS
+   - Writing wrappers for other NLP-OSS
    - Writing open-source APIs for open data
    - Teaching NLP with OSS
    - Avoiding the hammer OSS in NLP
