added submission information

--- a/_posts/2000-01-02-cfp.md
+++ b/_posts/2000-01-02-cfp.md
@@ -43,3 +43,20 @@ We invite topics related to NLP-OSS under broadly categorized into (i) software 
    To promote closer interaction, all accepted publications will be presented in the poster format and be required to give a 1 slide (90 seconds?) introduction of their work at the beginning of the session. For the rest of the workshop, invited talks will be given by developers and maintainers of prominent NLP OSS projects and we plan to close the workshop with a panel session with the invited speakers and the audience of the workshop.
 
 -->
+
+
+### Submission Information
+
+Authors are invited to submit a
+
+ - Full paper up to 8 pages of content
+ - Short paper up to 4 pages of content
+
+All papers are allowed unlimited but sensible pages for references. Final camera ready versions will be allowed an additional page of content to address reviewers' comments.
+
+Submission should be formatted according to the ACL2018 templates. We strongly recommend you to prepare your manuscript using LaTeX:
+
+ - [LaTeX](http://acl2018.org/downloads/acl18-latex.zip)
+ - [MS Word](http://acl2018.org/downloads/acl18-word.zip)
+
+Submissions should be uploaded to Softconf START conference management system. The submission site will be announced shortly.
