--- a/_posts/2000-01-05-dates.md
+++ b/_posts/2000-01-05-dates.md
@@ -7,7 +7,7 @@ fa-icon: calendar
 
 The NLP-OSS workshop will be co-located with the [ACL 2018 conference](http://acl2018.org/).
 
-- Paper Submission: TBD
-- Notification of Acceptance: TBD
-- Camera-Ready Version: TBD
-- Workshop: TBD (ACL 2018 conference dates are July 15th–20th, 2018)
+- Paper Submission: 8th April (Sun) 23:59 American Samoa Time
+- Notification of Acceptance: 6th May (Sun)
+- Camera-Ready Version: 20th May (Sun)
+- Workshop: 19th/20th July  (Thu/Fri)
