Updated CFP section as per CFP

--- a/_posts/2000-01-02-cfp.md
+++ b/_posts/2000-01-02-cfp.md
@@ -4,8 +4,9 @@ bg: '#BAD4FF'
 color: black
 fa-icon: file-text-o
 ---
-
-We invite topics related to NLP-OSS under broadly categorized into (i) software development, (ii) scientific contribution (iii) NLP-OSS case studies.
+We invite full papers (8 pages) or short papers (4 pages) on topics related to 
+NLP-OSS broadly categorized into (i) software development, (ii) scientific 
+contribution and (iii) NLP-OSS case studies.
 
  - **Software Development**
    - Designing and developing NLP-OSS
@@ -16,33 +17,30 @@ We invite topics related to NLP-OSS under broadly categorized into (i) software 
    - Best practices for NLP-OSS documentation and testing
    - Contribution to NLP-OSS without coding
    - Incentivizing OSS contributions in NLP
+   - Commercialization and Intellectual Property of NLP-OSS
+   - Defining and managing NLP-OSS project scope
+   - Issues in API design for NLP
+   - NLP-OSS software interoperability
+   - Analysis of the NLP-OSS community
 
  - **Scientific Contribution**
-   - Benchmarking OSS for specific NLP task(s)
+   - Surveying OSS for specific NLP task(s)
    - Demonstration and tutorial of NLP-OSS
    - New NLP-OSS introductions
    - Small but useful NLP-OSS
-   - Machine learning vs NLP-OSS
+   - NLP components in ML OSS
    - Citations and references for NLP-OSS
    - OSS vs experiment replicability
    - Gaps between existing NLP-OSS
-   - Task-independent NLP-OSS
-
+   - Task-generic vs task-specific software
 
  - **Case studies**
    - Case studies of how a specific bug is fixed or feature is added
    - Writing wrappers for other NLP-OSS
    - Writing open-source APIs for open data
    - Teaching NLP with OSS
-   - Avoiding the hammer OSS in NLP
+   - NLP-OSS in the industry
 
-<!--
-
-## Workshop Structure
-
-   To promote closer interaction, all accepted publications will be presented in the poster format and be required to give a 1 slide (90 seconds?) introduction of their work at the beginning of the session. For the rest of the workshop, invited talks will be given by developers and maintainers of prominent NLP OSS projects and we plan to close the workshop with a panel session with the invited speakers and the audience of the workshop.
-
--->
 
 
 ### Submission Information
