--- a/_posts/2000-01-01-intro.md
+++ b/_posts/2000-01-01-intro.md
@@ -1,5 +1,5 @@
 ---
-title: "home"
+title: "sponsors"
 bg: white
 color: black
 ---
@@ -23,3 +23,14 @@ An example of precious OSS knowledge comes from SpaCy developer [Montani (2017)]
 [Řehůřek (2017)](https://rare-technologies.com/mummy-effect-bridging-gap-between-academia-industry/) shared another example of insightful discussion on bridging the gap between the gap between academia and industry through creating open source and student incubation programs. Řehůřek discussed the need to look beyond the publish-or-perish culture to avoid the brittle "mummy effect" in SOTA research code/techniques. 
 
 We hope that the NLP-OSS workshop becomes the intellectual forum to collate various open source knowledge beyond the scientific contribution, announce new software/features, promote the open source culture and best practices that go beyond the conferences.
+
+## Sponsors
+
+Sponsorship helps keep NLP-OSS sustainable to widest possible audience. The NLP-OSS workshop is organized by volunteers from both academia and industry. Sponsorship goes to covering the cost of invited speakers. 
+
+If you or your company or institution are interested in sponsoring the NLP-OSS, please send us an email at nlposs.workshop@gmail.com. 
+
+
+{% include sponsor.html %}
+
+
