--- a/_posts/2000-01-05-dates.md
+++ b/_posts/2000-01-05-dates.md
@@ -7,7 +7,7 @@ fa-icon: calendar
 
 The NLP-OSS workshop will be co-located with the [ACL 2018 conference](http://acl2018.org/).
 
-- Paper Submission: 25th March (Sun) 23:59 American Samoa Time
-- Notification of Acceptance: 29th April (Sun)
-- Camera-Ready Version: 13th May (Sun)
+- Paper Submission: ~25th March (Sun)~ 8th April 23:59 American Samoa Time
+- Notification of Acceptance: ~29th April~ 6th May (Sun)
+- Camera-Ready Version: ~13th May~ 20th May (Sun)
 - Workshop: 19th/20th July  (Thu/Fri)
