added gold sponsor

--- a/_posts/2000-01-01-sponsors.md
+++ b/_posts/2000-01-01-sponsors.md
@@ -10,4 +10,6 @@ Sponsorship helps keep NLP-OSS sustainable to widest possible audience. The NLP-
 
 If you or your company or institution are interested in sponsoring the NLP-OSS, please send us an email at nlposs.workshop@gmail.com. 
 
+{% include gold-sponsors.html %}
+
 {% include silver-sponsors.html %}
