--- a/_posts/2000-01-05-dates.md
+++ b/_posts/2000-01-05-dates.md
@@ -7,7 +7,10 @@ fa-icon: calendar
 
 The NLP-OSS workshop will be co-located with the [ACL 2018 conference](http://acl2018.org/).
 
-- **Paper Submission:** <s>25th March (Sun)</s> 8th April 23:59 American Samoa Time
-- Notification of Acceptance: <s>29th April</s> 6th May (Sun)
-- Camera-Ready Version: <s>13th May</s> 20th May (Sun)
+- **Paper Submission:** <!--<s>25th March (Sun)</s>--> 8th April 23:59 American Samoa Time
+- Paper Reviews Starts: 14th May (Sat)
+- Paper Reviews Due: 3rd May (Thurs)
+- Notification of Acceptance: <!--<s>29th April</s>--> 6th May (Sun)
+
+- Camera-Ready Version: <!--<s>13th May</s>--> 20th May (Sun)
 - Workshop: 20th July  (Fri)
