Added accepted papers =)

--- a/_posts/2000-01-07-program.md
+++ b/_posts/2000-01-07-program.md
@@ -6,16 +6,57 @@ color: black
 
 ## Workshop Program
 
-| Time | Event | 
-| 0845 - 0900	| Loading in of Oral Presentations | 
-| 0900 - 0915	| Opening Remarks | 
-| 0915 - 0945 | Invited Talk 1 (Joel Nothman) | 
-| 0945 - 1030 | Lightning Presentation for Posters | 
-| 1030 - 1100 | Break |
-| 1100 - 1200 | Poster Session 1 | 
-| 1200 - 1400 | Lunch | 
-| 1400 - 1445 | Invited Talk 2 (Christopher Manning) | 
-| 1445 - 1530 | Poster Session 2 |
-| 1530 - 1600 | Break |
-| 1600 - 1645 | Invited Talk 3 (Matt and Ines) | 
-| 1700 - 1730 | Panel / Closing Remarks | 
+
+0845 - 0900	&nbsp;&nbsp; **Loading in of Oral Presentations**
+0900 - 0915	&nbsp;&nbsp; **Opening Remarks** 
+
+0915 - 0945 &nbsp;&nbsp; **Invited Talk 1 (Joel Nothman**
+
+0945 - 1030 &nbsp;&nbsp; **Lightning Presentation for Posters** 
+
+The Annotated Transformer 
+*Alexander Rush*
+
+1030 - 1100 &nbsp;&nbsp; **Break**
+
+1100 - 1200 &nbsp;&nbsp; **Poster Session 1**
+
+AllenNLP: A Deep Semantic Natural Language Processing Platform 
+*Matt Gardner, Joel Grus, Mark Neumann, Oyvind Tafjord, Pradeep Dasigi, Nelson Liu, Matthew Peters, Michael Schmitz and Luke Zettlemoyer*
+
+Stop Word Lists in Free Open-source Software Packages
+*Joel Nothman, Hanmin Qin and Roman Yurchak*
+
+Texar: A Modularized, Versatile, and Extensible Toolbox for Deep Text Generation
+*Zhiting Hu, Zichao Yang, Tiancheng Zhao, Haoran Shi, Junxian He, Di Wang, Xuezhe Ma, Zhengzhong Liu, Xiaodan Liang, Lianhui Qin, Devendra Singh Chaplot, Bowen Tan, Xingjiang Yu and Eric Xing*
+
+The ACL Anthology
+*Daniel Gildea, Min-Yen Kan, Nitin Madnani, Christoph Teichmann and Martin Villalba*
+
+The risk of sub-optimal use of Open Source NLP Software: UKB is inadvertently state-of-the-art in knowledge-based WSD 
+*Eneko Agirre, Oier Lopez de Lacalle and Aitor Soroa*
+
+1200 - 1400 &nbsp;&nbsp; **Lunch**
+
+1400 - 1445 &nbsp;&nbsp; **Invited Talk 2 (Christopher Manning)**
+
+1445 - 1530 &nbsp;&nbsp; **Poster Session 2**
+
+
+Baseline: A Library for Rapid Modeling, Experimentation and Development of Deep Learning Algorithms targeting NLP
+*Daniel Pressel, Sagnik Ray Choudhury, Brian Lester, Yanjie Zhao and Matt Barta*
+
+Extensible toolkit for distributed and mixed precision training of sequence-to-sequence models.
+*Oleksii Kuchaiev, Boris Ginsburg, Igor Gitman, Vitaly Lavrukhin, Carl Case and Paulius Micikevicius*
+
+Integrating Multiple NLP Technologies into an Open-source Platform for Multilingual Media Monitoring
+*Ulrich Germann, Renars Liepins, Didzis Gosko and Guntis Barzdins*
+
+Matchbox: Dispatch-Driven Autobatching for Imperative Deep Learning 
+*James Bradbury and Richard Socher*
+
+1530 - 1600 &nbsp;&nbsp; **Break**
+
+1600 - 1645 &nbsp;&nbsp; **Invited Talk 3 (Matt and Ines)**
+
+1700 - 1730 &nbsp;&nbsp; **Panel / Closing Remarks**
