Added bronze sponsors

--- a/_posts/2000-01-01-sponsors.md
+++ b/_posts/2000-01-01-sponsors.md
@@ -13,3 +13,5 @@ If you or your company or institution are interested in sponsoring the NLP-OSS, 
 {% include gold-sponsors.html %}
 
 {% include silver-sponsors.html %}
+
+{% include bronze-sponsors.html %}
