--- a/_posts/2000-01-05-dates.md
+++ b/_posts/2000-01-05-dates.md
@@ -10,6 +10,6 @@ The NLP-OSS workshop will be co-located with the [ACL 2018 conference](http://ac
 - Paper Submission: <!--<s>25th March (Sun)</s>--> <s>8th April 23:59 American Samoa Time</s>
 - Paper Reviews Starts: <s>14th April (Sat)</s>
 - Paper Reviews Due: <s>3rd May (Thurs)</s>
-- **Notification of Acceptance:** <!--<s>29th April</s>--> 9th May (Wed)
-- Camera-Ready Version: <!--<s>13th May</s>--> 20th May (Sun) 23:59 American Samoa Time
+- Notification of Acceptance: <!--<s>29th April</s>--> <s>9th May (Wed)</s>
+- **Camera-Ready Version**: <!--<s>13th May</s>--> 25th May (Fri) 23:59 American Samoa Time
 - Workshop: 20th July  (Fri)
