--- a/_posts/2000-01-02-program.md
+++ b/_posts/2000-01-02-program.md
@@ -20,7 +20,7 @@ color: black
 1100 - 1145 &nbsp;&nbsp; **Poster Session 1**
 
 AllenNLP: A Deep Semantic Natural Language Processing Platform <br>
-*Matt Gardner, Joel Grus, Mark Neumann, Oyvind Tafjord, Pradeep Dasigi, Nelson Liu, Matthew Peters, Michael Schmitz and Luke Zettlemoyer*
+*Matt Gardner, Joel Grus, Mark Neumann, Oyvind Tafjord, Pradeep Dasigi, Nelson F. Liu, Matthew Peters, Michael Schmitz and Luke Zettlemoyer*
 
 Stop Word Lists in Free Open-source Software Packages <br>
 *Joel Nothman, Hanmin Qin and Roman Yurchak*
