--- a/_posts/2000-01-04-dates.md
+++ b/_posts/2000-01-04-dates.md
@@ -11,5 +11,5 @@ The NLP-OSS workshop will be co-located with the [ACL 2018 conference](http://ac
 - Paper Reviews Starts: <s>14th April (Sat)</s>
 - Paper Reviews Due: <s>3rd May (Thurs)</s>
 - Notification of Acceptance: <!--<s>29th April</s>--> <s>9th May (Wed)</s>
-- **Camera-Ready Version**: <!--<s>13th May</s>--> 25th May (Fri) 23:59 American Samoa Time
-- Workshop: 20th July  (Fri)
+- Camera-Ready Version: <!--<s>13th May</s>--> <s>25th May (Fri) 23:59 American Samoa Time</s>
+- **Workshop**: 20th July  (Fri)
