Fixed minor issues in sponsors file.
- added missing 'the'
- suggested commas

--- a/_posts/2000-01-01-sponsors.md
+++ b/_posts/2000-01-01-sponsors.md
@@ -6,9 +6,9 @@ fa-icon: heart
 ---
 
 
-Sponsorship helps keep NLP-OSS sustainable to widest possible audience. The NLP-OSS workshop is organized by volunteers from both academia and industry. Sponsorship goes to covering the cost of invited speakers. 
+Sponsorship helps keep NLP-OSS sustainable to the widest possible audience. The NLP-OSS workshop is organized by volunteers from both academia and industry. Sponsorship goes to covering the cost of invited speakers. 
 
-If you or your company or institution are interested in sponsoring the NLP-OSS, please send us an email at nlposs.workshop@gmail.com. 
+If you, your company, or your institution are interested in sponsoring the NLP-OSS, please send us an email at nlposs.workshop@gmail.com. 
 
 {% include gold-sponsors.html %}
 
