Added proceeding links

--- a/_posts/2000-01-02-program.md
+++ b/_posts/2000-01-02-program.md
@@ -19,19 +19,19 @@ color: black
 
 1100 - 1145 &nbsp;&nbsp; **Poster Session 1**
 
-AllenNLP: A Deep Semantic Natural Language Processing Platform <br>
+[AllenNLP: A Deep Semantic Natural Language Processing Platform](https://aclanthology.info/papers/W18-2501/w18-2501) <br>
 *Matt Gardner, Joel Grus, Mark Neumann, Oyvind Tafjord, Pradeep Dasigi, Nelson F. Liu, Matthew Peters, Michael Schmitz and Luke Zettlemoyer*
 
-Stop Word Lists in Free Open-source Software Packages <br>
+[Stop Word Lists in Free Open-source Software Packages](https://aclanthology.info/papers/W18-2502/w18-2502) <br>
 *Joel Nothman, Hanmin Qin and Roman Yurchak*
 
-Texar: A Modularized, Versatile, and Extensible Toolbox for Deep Text Generation <br>
+[Texar: A Modularized, Versatile, and Extensible Toolbox for Deep Text Generation](https://aclanthology.info/papers/W18-2503/w18-2503) <br>
 *Zhiting Hu, Zichao Yang, Tiancheng Zhao, Haoran Shi, Junxian He, Di Wang, Xuezhe Ma, Zhengzhong Liu, Xiaodan Liang, Lianhui Qin, Devendra Singh Chaplot, Bowen Tan, Xingjiang Yu and Eric Xing*
 
-The ACL Anthology <br>
+[The ACL Anthology](https://aclanthology.info/papers/W18-2504/w18-2504) <br>
 *Daniel Gildea, Min-Yen Kan, Nitin Madnani, Christoph Teichmann and Martin Villalba*
 
-The risk of sub-optimal use of Open Source NLP Software: UKB is inadvertently state-of-the-art in knowledge-based WSD <br>
+[The risk of sub-optimal use of Open Source NLP Software: UKB is inadvertently state-of-the-art in knowledge-based WSD](https://aclanthology.info/papers/W18-2505/w18-2505) <br>
 *Eneko Agirre, Oier Lopez de Lacalle and Aitor Soroa*
 
 1200 - 1400 &nbsp;&nbsp; **Lunch**
@@ -44,18 +44,21 @@ The risk of sub-optimal use of Open Source NLP Software: UKB is inadvertently st
 
 1600 - 1645 &nbsp;&nbsp; **Poster Session 2**
 
-Baseline: A Library for Rapid Modeling, Experimentation and Development of Deep Learning Algorithms targeting NLP <br>
+[Baseline: A Library for Rapid Modeling, Experimentation and Development of Deep Learning Algorithms targeting NLP](https://aclanthology.info/papers/W18-2506/w18-2506) <br>
 *Daniel Pressel, Sagnik Ray Choudhury, Brian Lester, Yanjie Zhao and Matt Barta*
 
-Extensible toolkit for distributed and mixed precision training of sequence-to-sequence models <br>
+[OpenSeq2Seq: Extensible toolkit for distributed and mixed precision training of sequence-to-sequence models](https://aclanthology.info/papers/W18-2507/w18-2507) <br>
 *Oleksii Kuchaiev, Boris Ginsburg, Igor Gitman, Vitaly Lavrukhin, Carl Case and Paulius Micikevicius*
 
-Integrating Multiple NLP Technologies into an Open-source Platform for Multilingual Media Monitoring <br>
+[Integrating Multiple NLP Technologies into an Open-source Platform for Multilingual Media Monitoring](https://aclanthology.info/papers/W18-2508/w18-2508) <br>
 *Ulrich Germann, Renars Liepins, Didzis Gosko and Guntis Barzdins*
 
-The Annotated Transformer <br>
+[The Annotated Transformer](https://aclanthology.info/papers/W18-2509/w18-2509) <br>
 *Alexander Rush*
 
 1645 - 1730 &nbsp;&nbsp; **Invited Talk 3 (Matthew Honnibal and Ines Montani)**
 
 1730 - 1735 &nbsp;&nbsp; **Closing Remarks**
+
+(Full proceedings on https://aclanthology.info/events/ws-2018#W18-25)
+
