Added outlink to full proceedings

--- a/_posts/2000-01-02-program.md
+++ b/_posts/2000-01-02-program.md
@@ -60,5 +60,5 @@ color: black
 
 1730 - 1735 &nbsp;&nbsp; **Closing Remarks**
 
-(Full proceedings on https://aclanthology.info/events/ws-2018#W18-25)
+(Full proceedings on [https://aclanthology.info/events/ws-2018#W18-25](https://aclanthology.info/events/ws-2018#W18-25))
 
