--- a/_posts/2000-01-02-program.md
+++ b/_posts/2000-01-02-program.md
@@ -38,11 +38,13 @@ color: black
 
 1400 - 1445 &nbsp;&nbsp; **Invited Talk 2 (Christopher Manning)** 
 
-1445 - 1530 &nbsp;&nbsp; **Lightning Presentation for Posters 2** 
+1445 - 1530 &nbsp;&nbsp; **Invited Talk 3 (Marcin Junczys-Dowmunt)**
 
 1530 - 1600 &nbsp;&nbsp; **Break**
 
-1600 - 1645 &nbsp;&nbsp; **Poster Session 2**
+1600 - 1645 &nbsp;&nbsp; **Lightning Presentation for Posters 2** 
+
+1645 - 1730 &nbsp;&nbsp; **Poster Session 2**
 
 [Baseline: A Library for Rapid Modeling, Experimentation and Development of Deep Learning Algorithms targeting NLP](https://aclanthology.info/papers/W18-2506/w18-2506) <br>
 *Daniel Pressel, Sagnik Ray Choudhury, Brian Lester, Yanjie Zhao and Matt Barta*
@@ -55,8 +57,6 @@ color: black
 
 [The Annotated Transformer](https://aclanthology.info/papers/W18-2509/w18-2509) <br>
 *Alexander Rush*
-
-1645 - 1730 &nbsp;&nbsp; **Invited Talk 3 (Matthew Honnibal and Ines Montani)**
 
 1730 - 1735 &nbsp;&nbsp; **Closing Remarks**
 
