Added Marcin's Bio and commented out SpaCy's talk

--- a/_posts/2000-01-03-talks.md
+++ b/_posts/2000-01-03-talks.md
@@ -42,6 +42,21 @@ My students and I at the Stanford NLP Group started releasing academic open sour
 <hr/>
 
 <h3>
+	<strong>Building Marian (A Fast Neural Machine Translation in C++)</strong></br>
+	<a href="https://marian-nmt.github.io/publications/">Marcin Junczys-Dowmunt</a>
+</h3>
+
+This talk will share some lessons learnt from building Marian. More details coming up...
+
+#### ***Bio*** 
+
+<img src="img/marcin.jpeg" alt="Marcin Junczys-Dowmunt" align="left" style="margin-right: 32px; margin-bottom: 16px;" />
+
+Marcin Junczys-Dowmunt is a Principal NLP Scientist in the Machine Translation team at Microsoft -- Redmond since January 2018. Before joining Microsoft, He was an Assistant Professor at the Adam Mickiewicz University in Poznan, Poland, and a visiting researcher in the MT group at the University of Edinburgh. He collaborated for many years with the World Intellectual Property Organization and the United Nations, helping with the development of their in-house statistical and neural machine translation systems. His main research interests are neural machine translation, automatic post-editing and grammatical error correction. Most of my open-source activity is being eaten up by my NMT pet-project [Marian](http://github.com/marian-nmt/marian).
+
+
+<!--
+<h3>
 	<strong>Reflections on Running spaCy: Commercial Open-source NLP</strong><br/>
 	<a href="https://explosion.ai/">Matthew Honnibal and Ines Montani</a>, Explosion AI
 </h3>
@@ -59,3 +74,5 @@ Ines Montani is the lead developer of Prodigy, and a core contributor to spaCy. 
 <img src="img/matt-honnibal.jpg" alt="Matthew Honnibal" align="left" style="margin-right: 32px; margin-bottom: 16px;" />
 
 Matthew Honnibal began his research career as a linguist, completing his PhD in 2009 on lexicalised parsing with Combinatory Categorial Grammar, before working on incremental speech parsing. These days he is best known as a software engineer, for his work on the spaCy NLP library. He grew up in Sydney, lives in Berlin, and still misses CCG.
+
+-->
