Typo in tag, added affiliations

--- a/_posts/2000-01-03-talks.md
+++ b/_posts/2000-01-03-talks.md
@@ -42,8 +42,8 @@ My students and I at the Stanford NLP Group started releasing academic open sour
 <hr/>
 
 <h3>
-	<strong>Building Marian (A Fast Neural Machine Translation in C++)</strong></br>
-	<a href="https://marian-nmt.github.io/publications/">Marcin Junczys-Dowmunt</a>
+	<strong>Building Marian (A Fast Neural Machine Translation in C++)</strong><br/>
+	<a href="https://marian-nmt.github.io/publications/">Marcin Junczys-Dowmunt</a>, Microsoft Translation 
 </h3>
 
 This talk will share some lessons learnt from building Marian. More details coming up...
