Minor fixes to bio

--- a/_posts/2000-01-03-talks.md
+++ b/_posts/2000-01-03-talks.md
@@ -43,14 +43,19 @@ My students and I at the Stanford NLP Group started releasing academic open sour
 
 <h3>
 	<strong>Building Marian (A Fast Neural Machine Translation in C++)</strong><br/>
-	<a href="https://marian-nmt.github.io/publications/">Marcin Junczys-Dowmunt</a>, Microsoft Translation 
+	<a href="http://emjotde.github.io/">Marcin Junczys-Dowmunt</a>, Microsoft Translation 
 </h3>
 
 This talk will share some lessons learnt from building Marian. More details coming up...
 
 #### ***Bio*** 
 
-<img src="img/marcin.jpeg" alt="Marcin Junczys-Dowmunt" align="left" style="margin-right: 32px; margin-bottom: 16px;" />
+img.resize {
+  max-width:50%;
+  max-height:50%;
+}
+
+<img src="img/marcin.jpeg" alt="Marcin Junczys-Dowmunt" class="resize" align="left" style="margin-right: 32px; margin-bottom: 16px;" />
 
 Marcin Junczys-Dowmunt is a Principal NLP Scientist in the Machine Translation team at Microsoft -- Redmond since January 2018. Before joining Microsoft, He was an Assistant Professor at the Adam Mickiewicz University in Poznan, Poland, and a visiting researcher in the MT group at the University of Edinburgh. He collaborated for many years with the World Intellectual Property Organization and the United Nations, helping with the development of their in-house statistical and neural machine translation systems. His main research interests are neural machine translation, automatic post-editing and grammatical error correction. Most of my open-source activity is being eaten up by my NMT pet-project [Marian](http://github.com/marian-nmt/marian).
 
