--- a/_posts/2000-01-03-talks.md
+++ b/_posts/2000-01-03-talks.md
@@ -52,7 +52,7 @@ This talk will share some lessons learnt from building Marian. More details comi
 
 <img src="img/marcin.jpeg" alt="Marcin Junczys-Dowmunt" width="160" height="160" align="left" style="margin-right: 32px; margin-bottom: 16px;" />
 
-Marcin Junczys-Dowmunt is a Principal NLP Scientist in the Machine Translation team at Microsoft -- Redmond since January 2018. Before joining Microsoft, He was an Assistant Professor at the Adam Mickiewicz University in Poznan, Poland, and a visiting researcher in the MT group at the University of Edinburgh. He collaborated for many years with the World Intellectual Property Organization and the United Nations, helping with the development of their in-house statistical and neural machine translation systems. His main research interests are neural machine translation, automatic post-editing and grammatical error correction. Most of my open-source activity is being eaten up by my NMT pet-project [Marian](http://github.com/marian-nmt/marian).
+Marcin Junczys-Dowmunt is a Principal NLP Scientist in the Machine Translation team at Microsoft -- Redmond since January 2018. Before joining Microsoft, He was an Assistant Professor at the Adam Mickiewicz University in Poznan, Poland, and a visiting researcher in the MT group at the University of Edinburgh. He collaborated for many years with the World Intellectual Property Organization and the United Nations, helping with the development of their in-house statistical and neural machine translation systems. His main research interests are neural machine translation, automatic post-editing and grammatical error correction. Most of his open-source activity is being eaten up by his NMT pet-project [Marian](http://github.com/marian-nmt/marian).
 
 
 <!--
