Add slides for Nothman invited talk

--- a/_posts/2000-01-03-talks.md
+++ b/_posts/2000-01-03-talks.md
@@ -7,7 +7,7 @@ fa-icon: microphone
 
 
 <h3>
-	<strong>Open-Source Software's Responsibility to Science</strong><br/>
+	<strong><a href="slides/nothman.pdf">Open-Source Software's Responsibility to Science</a></strong><br/>
 	<a href="http://joelnothman.com/">Joel Nothman</a>, University of Sydney
 </h3>
 
