also change URL to something more informative

--- a/_posts/2000-01-03-talks.md
+++ b/_posts/2000-01-03-talks.md
@@ -8,7 +8,7 @@ fa-icon: microphone
 
 <h3>
 	<strong><a href="slides/nothman.pdf">Open-Source Software's Responsibility to Science</a></strong><br/>
-	<a href="http://joelnothman.com/">Joel Nothman</a>, University of Sydney
+	<a href="https://github.com/jnothman">Joel Nothman</a>, University of Sydney
 </h3>
 
 Open-source software makes sophisticated technologies available to a wide audience. Arguably, most people applying language processing and machine learning techniques rely on popular open source tools targeted at these applications. Users may themselves be incapable of implementing the underlying algorithms. Users may or may not have extensive training to critically conduct experiments with these tools.
