Add it to the programme too

--- a/_posts/2000-01-02-program.md
+++ b/_posts/2000-01-02-program.md
@@ -11,7 +11,7 @@ color: black
 
 0900 - 0905	&nbsp;&nbsp; **Opening Remarks** 
 
-0905 - 0950 &nbsp;&nbsp; **Invited Talk 1 (Joel Nothman)**
+0905 - 0950 &nbsp;&nbsp; **Invited Talk 1 (Joel Nothman)** [[slides](slides/nothman.pdf)]
 
 0950 - 1030 &nbsp;&nbsp; **Lightning Presentation for Posters 1** 
 
