Added lightning slides

--- a/_posts/2000-01-02-program.md
+++ b/_posts/2000-01-02-program.md
@@ -13,7 +13,7 @@ color: black
 
 0905 - 0950 &nbsp;&nbsp; **Invited Talk 1 (Joel Nothman)** [[slides](slides/nothman.pdf)]
 
-0950 - 1030 &nbsp;&nbsp; **Lightning Presentation for Posters 1** 
+0950 - 1030 &nbsp;&nbsp; **Lightning Presentation for Posters 1** [[slides](https://github.com/nlposs/nlposs.github.io/raw/master/slides/lightning-1.pdf)]
 
 1030 - 1100 &nbsp;&nbsp; **Break**
 
@@ -42,7 +42,7 @@ color: black
 
 1530 - 1600 &nbsp;&nbsp; **Break**
 
-1600 - 1645 &nbsp;&nbsp; **Lightning Presentation for Posters 2** 
+1600 - 1645 &nbsp;&nbsp; **Lightning Presentation for Posters 2** [[slides](https://github.com/nlposs/nlposs.github.io/raw/master/slides/lightning-2.pdf)]
 
 1645 - 1730 &nbsp;&nbsp; **Poster Session 2**
 
